Update Railway environment variables and optimize Composer post-install commands

--- a/.env.railway
+++ b/.env.railway
@@ -5,7 +5,7 @@ APP_NAME=Cutafig Backend
 APP_ENV=production
 APP_DEBUG=false
 # UPDATE THIS with your actual Railway domain after generating it
-APP_URL=https://cutafig-backend-production.railway.app
+APP_URL=https://cutafigbackend-production.up.railway.app/
 
 # Generate a new key with: php artisan key:generate --show
 APP_KEY=base64:r/myFm76ppSk0UHxxDgJs656625nJFm1n1NZJFvw8X0=
