--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,8 @@
             "@php artisan migrate --graceful --ansi"
         ],
         "post-install-cmd": [
+            "@php artisan config:cache",
+            "@php artisan route:cache",
             "@php artisan migrate --force"
         ],
         "dev": [
