--- a/composer.json
+++ b/composer.json
@@ -49,10 +49,7 @@
             "@php artisan migrate --graceful --ansi"
         ],
         "post-install-cmd": [
-            "@php artisan config:clear",
-            "@php artisan config:cache",
-            "@php artisan route:cache",
-            "@php artisan migrate --force --verbose"
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
