--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,13 @@
 [build]
 builder = "nixpacks"
-buildCommand = "composer install --optimize-autoloader --no-dev"
+buildCommand = "composer install --optimize-autoloader --no-dev && php artisan config:cache && php artisan route:cache && php artisan view:cache"
 
 [deploy]
-startCommand = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+startCommand = "php artisan migrate --force && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=$PORT"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
+
+[variables]
+APP_ENV = "production"
+SESSION_DRIVER = "file"
+LOG_CHANNEL = "stderr"
