--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,14 @@
 [build]
 builder = "nixpacks"
-buildCommand = "composer install --optimize-autoloader --no-dev && php artisan config:cache && php artisan route:cache && php artisan view:cache"
+buildCommand = "composer install --optimize-autoloader --no-dev"
 
 [deploy]
-startCommand = "php artisan migrate --force && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=$PORT"
+startCommand = "php artisan migrate --force && php artisan config:clear && php artisan config:cache && php artisan serve --host=0.0.0.0 --port=$PORT"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
 
 [variables]
 APP_ENV = "production"
-SESSION_DRIVER = "file"
+APP_DEBUG = "false"
+SESSION_DRIVER = "database"
 LOG_CHANNEL = "stderr"
