Update environment configuration and add deployment check script; modify CORS settings and streamline start command

--- a/.env.railway
+++ b/.env.railway
@@ -1,7 +1,7 @@
 # Railway Production Environment Variables
 # Copy these to your Railway project settings
 
-APP_NAME=Cutafig Backend
+APP_NAME="Cutafig Backend"
 APP_ENV=production
 APP_DEBUG=false
 # UPDATE THIS with your actual Railway domain after generating it
@@ -10,9 +10,8 @@ APP_URL=https://cutafigbackend-production.up.railway.app/
 # Generate a new key with: php artisan key:generate --show
 APP_KEY=base64:r/myFm76ppSk0UHxxDgJs656625nJFm1n1NZJFvw8X0=
 
-# CORS - Update with your actual frontend domain
-# UPDATE THIS with your actual frontend domain
-CORS_ALLOWED_ORIGINS=https://your-nextjs-frontend.vercel.app,http://localhost:3000
+# CORS - Allow all origins for testing
+CORS_ALLOWED_ORIGINS=*
 CORS_ALLOWED_ORIGINS_PATTERNS=
 
 APP_LOCALE=en
