--- a/railway.toml
+++ b/railway.toml
@@ -3,12 +3,15 @@ builder = "nixpacks"
 buildCommand = "composer install --optimize-autoloader --no-dev"
 
 [deploy]
-startCommand = "php artisan migrate --force && php artisan config:clear && php artisan config:cache && php artisan serve --host=0.0.0.0 --port=$PORT"
+startCommand = "php artisan migrate --force && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=${PORT}"
 restartPolicyType = "on_failure"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 3
 
 [variables]
 APP_ENV = "production"
 APP_DEBUG = "false"
 SESSION_DRIVER = "database"
 LOG_CHANNEL = "stderr"
+LOG_LEVEL = "error"
+CACHE_STORE = "database"
+QUEUE_CONNECTION = "database"
