--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "composer install --optimize-autoloader --no-dev"
 
 [deploy]
-startCommand = "php artisan migrate --force && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=${PORT}"
+startCommand = "echo \"PORT is: $PORT\" && php artisan migrate --force && php artisan config:clear && php artisan serve --host=0.0.0.0 --port=$PORT"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
 
